@@ -6,6 +6,9 @@ Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser lice
 
 2.5b3
 - [Feature] Spotlight Importer for bookmarks
+- [Feature] Synchronize bookmarks with .Mac
+- [Bugfix] New connection dialog remembers field values
+- [Bugfix] Various improvements
 
 2.5b2
 - [Localize] Indonesian Localization
